--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -33,7 +33,7 @@ body:
       description: Please provide the version you're using (run the commands in backticks on a shell).
       value: |-
         - Rust & Cargo: `cargo --version`
-        - rustere: `cargo pkgid | cut -d# -f2 | cut -d: -f2`
+        - reuler: `cargo pkgid | cut -d# -f2 | cut -d: -f2`
     validations:
       required: true
   - type: textarea
