🔖 Change version for release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "reuler"
-version = "0.1.0-dev"
+version = "0.1.0"
 description = "Solutions to Project Euler in Rust"
 edition = "2021"
 license = "MIT"
